<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="onSubmit"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkBox_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_1_value" />

        <CheckBox
            android:id="@+id/checkBox_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_2_value" />

        <CheckBox
            android:id="@+id/checkBox_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_3_value" />

        <CheckBox
            android:id="@+id/checkBox_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_4_value" />

        <CheckBox
            android:id="@+id/checkBox_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_5_value" />

        <Button
            android:id="@+id/show_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSubmit"
            android:text="@string/show_btn_value" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>